k8s-dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mddash-dev
spec:
  type: ClusterIP
  ports:
  - name: mddash-dev-port
    port: 80                                                                    
    targetPort: 8888    
  selector:
    app: mddash-dev
